# EurekaWeb

./: .gitignore  a.txt
eureka_web_api/: Cargo.toml  a.txt
eureka_web_api/engine/: EurekaUCI
eureka_web_api/src/: engine.rs  lib.rs  main.rs
eureka_web_api/tests/: engine.rs  health_check.rs  search_test.rs
frontend/: package-lock.json  package.json
frontend/src/: App.js
frontend/src/components/: CustomDialog.js  Game.js
